--- a/SchlaflichtApp/package.json
+++ b/SchlaflichtApp/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
     "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react-native": "0.79.2",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
