--- a/SchlaflichtApp/package.json
+++ b/SchlaflichtApp/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/slider": "^4.5.7",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-vector-icons": "^10.2.0"
