--- a/SchlaflichtApp/android/app/build.gradle
+++ b/SchlaflichtApp/android/app/build.gradle
@@ -26,6 +26,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    // weitere Libraries, aber KEIN react-native oder react-android hier!
+    implementation 'com.google.android.material:material:1.11.0'
+    // weitere dependencies falls nötig
 }
 
