--- a/SchlaflichtApp/android/app/build.gradle
+++ b/SchlaflichtApp/android/app/build.gradle
@@ -7,10 +7,10 @@ project.ext.react = [
 android {
     compileSdkVersion 34
 
-    namespace "com.schlaflichtapp" // <-- passe an, falls gewünscht
+    namespace = "com.schlaflichtapp" // <-- NEU: korrekt mit '='
 
     defaultConfig {
-        applicationId "com.schlaflichtapp" // <-- passe an, falls gewünscht
+        applicationId = "com.schlaflichtapp" // <-- NEU: korrekt mit '='
         minSdkVersion 23
         targetSdkVersion 34
         versionCode 1
@@ -29,4 +29,3 @@ dependencies {
     implementation 'com.google.android.material:material:1.11.0'
     // weitere dependencies falls nötig
 }
-
